--- a/packages/docutils/tsconfig.json
+++ b/packages/docutils/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "paths": {
       "@appium/support": ["../support"],
       "@appium/types": ["../types"]
